# quickfif

./: .gitignore  LICENSE.txt  README.md  noxfile.py  open_raw.py  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  tests.yml
mne_cli_tools/: __init__.py  config.json  factory.py  inspect_utils.py  loader.py  main.py  parser.py
mne_cli_tools/mne_types/: __init__.py  annotations.py  epochs.py  ica.py  raw_fif.py  unsupported.py
src/mne_cli_tools/: click.py  click_bridge.py  config.py  factory.py  files.py  ipython.py  main.py  parsers.py  types.py
src/mne_cli_tools/api/: commands.py  docs.py  errors.py
src/mne_cli_tools/cli/: docs.py  errors.py  main.py
src/mne_cli_tools/mct_types/: annotations.py  annots_type.py  base.py  epochs.py  epochs_type.py  ica.py  ica_type.py  raw_fif.py  raw_type.py
src/mne_cli_tools/mne_types/: __init__.py  annotations.py  base.py  epochs.py  ica.py  raw_fif.py
src/quickfif/: config.py  ipython.py  parsers.py
src/quickfif/cli/: __init__.py  docs.py  errors.py  main.py
src/quickfif/qf_types/: annots_type.py  base.py  epochs_type.py  ica_type.py  raw_type.py
tests/: __init__.py  conftest.py  fake_mne_type.py  test_cli.py  test_cli_fails.py  test_cli_ok.py  test_cli_preview_fails.py  test_cli_preview_ok.py  test_config.py  test_config_copy_dispatch.py  test_ipython.py  test_raw_fif.py
tests/plugins/: annots_fixtures.py  epochs_fixtures.py  fake_mct_type.py  fake_qf_type.py  ica_fixtures.py  raw_fif_fixtures.py  raw_fixtures.py
tests/test_api/: conftest.py  test_console.py  test_copy.py  test_read.py
tests/test_cli/: conftest.py  test_main_command.py  test_subcommands.py
tests/test_config/: conftest.py  test_config.py  test_copy_dispatch.py  test_save_dispatch.py
tests/test_mct_types/: test_annots_type.py  test_epochs_type.py  test_ica_type.py
tests/test_mne_types/: conftest.py  test_annotations.py  test_epochs.py  test_ica.py  test_raw_fif.py  test_raw_fif_read.py
tests/test_qf_types/: test_annots_type.py  test_epochs_type.py  test_ica_type.py  test_raw_type.py
(+11 files in other folders)
