[tool.poetry]
name = "mne_cli_tools"
version = "0.1.1"
description = ""
authors = ["Dmitrii Altukhov <dm.altukhov@ya.ru>"]
[tool.poetry.scripts]
mct = "mne_cli_tools.main:main"

[tool.poetry.dependencies]
python = ">=3.9"
mne = "^1.0.3"
ipython = "^8.4.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
scipy = "^1.8.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
