[tool.poetry]
name = "mne_cli_tools"
version = "0.1.3"
description = ""
authors = ["Dmitrii Altukhov <dm.altukhov@ya.ru>"]
[tool.poetry.scripts]
mct = "mne_cli_tools.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mne = "^1.0.3"
ipython = "^8.4.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
scipy = "^1.8.1"
click = "^8.1.3"
phantom-types = "^2.1.0"
returns = "^0.21.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
pytest = "^7.4.0"
hypothesis = "^6.80.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
